Bug 1581285, cancel drags in child processes when the drag gesture is stopped in the parent, r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D47767